made new files for graphics